--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="chatRoom">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h4>Hello, World???</h4>
+  <ui-view></ui-view>
+
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <!-- AngularUI Router -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+     <!-- FireBase -->
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCwsCAV996lUPLuElMtTfcIaAWznEbufPA",
+    authDomain: "chat-room-9abf9.firebaseapp.com",
+    databaseURL: "https://chat-room-9abf9.firebaseio.com",
+    projectId: "chat-room-9abf9",
+    storageBucket: "chat-room-9abf9.appspot.com",
+    messagingSenderId: "520693963113"
+  };
+  firebase.initializeApp(config);
+</script>
+    <!-- Application Files -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
 </body>
 </html>
