--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="chatRoom">
+<html ng-app="blocChat">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/home.css">
 </head>
 <body>
   <ui-view></ui-view>
@@ -31,6 +33,7 @@
 </script>
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/factory/Room.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
 </body>
 </html>
