--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 <body>
   <ui-view></ui-view>
@@ -16,24 +18,29 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
      <!-- FireBase -->
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyCwsCAV996lUPLuElMtTfcIaAWznEbufPA",
+        authDomain: "chat-room-9abf9.firebaseapp.com",
+        databaseURL: "https://chat-room-9abf9.firebaseio.com",
+        projectId: "chat-room-9abf9",
+        storageBucket: "chat-room-9abf9.appspot.com",
+        messagingSenderId: "520693963113"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
 
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCwsCAV996lUPLuElMtTfcIaAWznEbufPA",
-    authDomain: "chat-room-9abf9.firebaseapp.com",
-    databaseURL: "https://chat-room-9abf9.firebaseio.com",
-    projectId: "chat-room-9abf9",
-    storageBucket: "chat-room-9abf9.appspot.com",
-    messagingSenderId: "520693963113"
-  };
-  firebase.initializeApp(config);
-</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
-    <script src="/scripts/factory/Room.js"></script>
+      <script src="/scripts/factory/Room.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/ModalCtrl.js"></script>
+    <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
 </body>
 </html>
