--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
       <script src="/scripts/factory/Room.js"></script>
+        <script src="/scripts/factory/Message.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
