--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,19 @@
 
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <!-- FireBase -->
+   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+
     <!-- AngularUI Router -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
-     <!-- FireBase -->
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+
+     <!-- Bootstrap -->
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+ <!-- Cookies -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
+
     <script>
       // Initialize Firebase
       var config = {
@@ -30,11 +39,7 @@
       };
       firebase.initializeApp(config);
     </script>
-
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+   <!-- Cookies -->
 
     <!-- Application Files -->
     <script src="/scripts/app.js"></script>
@@ -43,5 +48,8 @@
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
+    <script src="/scripts/controllers/UsernameCtrl.js"></script>
+    <script src="/scripts/factory/BlocChatCookies.js"></script>
+
 </body>
 </html>
